--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,14 @@
   --bg-hero-color: #c4c4c4;
   --icon-body-color: #afb1b8;
   --icon-footer-bgc: rgba(255, 255, 255, 0.1);
+  --work-bgc: rgba(47, 48, 58, 0.8);
+  --overlay-color: rgba(33, 150, 243, 0.9);
+  --modal-bgc: rgba(0, 0, 0, 0.2);
 
   --primary-font-family: "Roboto", "Verdana", sans-serif;
   --secondary-font-family: "Raleway", "Tahoma", sans-serif;
+
+  --transition-link: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ---------------------General styles-------------------- */
 
@@ -120,8 +125,14 @@ p {
 .main-nav .link,
 .contacts .link {
   padding: 32px 0;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-nav .link {
+  position: relative;
+
   color: var(--secondary-text-color);
 }
 .contacts .link {
@@ -142,13 +153,26 @@ p {
 .link.current {
   color: var(--logo-primary-color);
 }
+.link.current::after {
+  content: "";
+  position: absolute;
+  bottom: -0.5px;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+
+  background-color: var(--logo-primary-color);
+}
 
 /*----------------Studio------------------*/
 
 /*----------------Hero----------------------*/
 
 .hero {
-  min-width: 1600px;
+  max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
 
@@ -190,8 +214,11 @@ p {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+
   color: var(--primary-white-color);
   background-color: var(--logo-primary-color);
+
+  transition-property: backgraund-color var(--transition-link);
 }
 .hero .btn:hover,
 .hero .btn:focus {
@@ -261,6 +288,24 @@ p {
 .work .item:not(:last-child) {
   margin-right: 30px;
 }
+.work .item {
+  position: relative;
+}
+.work .undertext {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  background-color: var(--work-bgc);
+  color: #fff;
+}
 
 /* ---------------Our team------------------ */
 
@@ -314,6 +359,9 @@ p {
 
   border-radius: 50%;
   color: var(--icon-body-color);
+
+  transition-property: color var(--transition-link),
+    backgraund-color var(--transition-link);
 }
 .social-link:hover,
 .social-link:focus {
@@ -340,6 +388,8 @@ p {
 
   border: 1px solid var(--icon-body-color);
   border-radius: 4px;
+
+  transition-property: color var(--transition-link);
 }
 .client-link:hover,
 .client-link:focus {
@@ -386,10 +436,10 @@ p {
 }
 .footer-icon .subtitle {
   margin-bottom: 20px;
-}
-.footer-icon .subtitle {
+  font-weight: 700;
   color: var(--primary-white-color);
 }
+
 .footer-social-link {
   color: var(--primary-white-color);
   background-color: var(--icon-footer-bgc);
@@ -419,6 +469,9 @@ p {
   text-align: center;
   color: var(--secondary-text-color);
   background-color: var(--primary-section-color);
+
+  transition-property: color var(--transition-link),
+    backgraund-color var(--transition-link), box-shadow var(--transition-link);
 }
 .menu .btn:hover,
 .menu .btn:focus {
@@ -436,6 +489,36 @@ p {
 }
 .projects-link {
   display: block;
+}
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transform: translateY(100%);
+
+  width: 100%;
+  height: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform var(--transition-link);
+}
+.projects-item:hover .overlay {
+  transform: translateY(0);
 }
 .projects-link:hover {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -460,4 +543,67 @@ p {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+/* -----Modal window----------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--modal-bgc);
+
+  transition: opacity var(--transition-link), visibility var(--transition-link);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translateX(-50%) translateY(-50%);
+
+  width: 528px;
+  min-height: 581px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition: transform var(--transition-link), opacity var(--transition-link);
+}
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: scale(1.75);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 17px;
+  right: 17px;
+
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.icon-close {
+  fill: var(--logo-secondary-color);
 }
